--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: General Sans;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body,
@@ -13,13 +14,9 @@ html {
 
 body {
     background: hsla(205, 46%, 30%, 1);
-
     background: linear-gradient(90deg, hsla(205, 46%, 30%, 1) 0%, hsla(260, 29%, 36%, 1) 100%);
-
     background: -moz-linear-gradient(90deg, hsla(205, 46%, 30%, 1) 0%, hsla(260, 29%, 36%, 1) 100%);
-
     background: -webkit-linear-gradient(90deg, hsla(205, 46%, 30%, 1) 0%, hsla(260, 29%, 36%, 1) 100%);
-
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#295270", endColorstr="#524175", GradientType=1);
 }
 
@@ -36,12 +33,12 @@ body {
     margin-left: 6px;
     cursor: pointer;
     user-select: none;
-    background-color: rgba(0, 0, 0, 0.6);
-    border: 4px solid white;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 3px solid white;
     border-radius: 50px;
-    padding: 5px 20px;
+    padding: 5px 25px;
     margin-bottom: 10px;
-    transition: scale 0.05s ease-in;
+    transition: scale 0.1s ease-in;
 }
 
 .title-button:active {
@@ -51,33 +48,33 @@ body {
 .container {
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
-    height: 30vh;
-    width: 45vw;
-    padding: 10px 15px;
+    height: fit-content;
+    width: fit-content;
+    padding: 6vmin 5vmin;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
 }
 
 .password-container {
     display: flex;
+    margin-bottom: 4vh;
 }
 
 .password-field {
-    width: 35vw;
+    width: 70vmin;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     padding: 10px;
     font-size: 20px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    border: 1px solid black;
+    border: 1px solid transparent;
 }
 
 .password-container button {
-    width: 5vw;
-    padding: 10px;
+    width: 18vmin;
+    padding: 2vmin;
     font-size: 20px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -86,35 +83,47 @@ body {
     cursor: pointer;
     border-left: 1px solid white;
     transition: color 0.5s ease-in-out, background-color 0.1s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .password-container button:hover {
     color: white;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .options-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1vw;
+    gap: 2vmin;
 }
 
 .range-container {
     display: flex;
     align-items: center;
-    width: 19vw;
+    justify-content: center;
+    width: 38vmin;
+}
+
+.range-container label {
+    color: rgb(153, 152, 152);
+    width: 20vmin;
+}
+
+.range-container label span {
+    color: white;
+    font-size: 19px;
 }
 
 input[type="range"] {
     accent-color: gray;
     border: none;
     outline: none;
-    width: 12vw;
+    width: 30vmin;
     cursor: pointer;
 }
-
-/* input[type="range"]:hover {} */
 
 label {
     color: white;
@@ -149,7 +158,9 @@ input[type="checkbox"]:checked::before {
 }
 
 .numallowed-container,
-.charallowed-container {
+.charallowed-container,
+.lowerallowed-container,
+.upperallowed-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -157,8 +168,54 @@ input[type="checkbox"]:checked::before {
 }
 
 .numallowed-container label,
-.charallowed-container label {
+.charallowed-container label,
+.lowerallowed-container label,
+.upperallowed-container label {
     cursor: pointer;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .options-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .options-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+    }
+
+    input[type="range"] {
+        width: 50vmin;
+    }
+
+    .range-container {
+        width: 50vmin;
+    }
+
+    .range-container label {
+        margin-left: 5px;
+        width: 50vw;
+    }
+
+    .password-container button {
+        font-size: 15px;
+    }
+
+    .container {
+        width: 100vw;
+        border-radius: 0;
+        padding: 8vmin 3vmin;
+    }
+
+    label {
+        margin-left: 5px;
+    }
 }
